# flashpoint

./: .gitignore  CLAUDE.md  LICENSE  README.md
docs/: adr-001-compute-fargate-over-lmi.md  ember-replan-fargate.md  fargate-deep-dive.md  lmi-deep-dive.md
driver/: Dockerfile  entrypoint.sh  executor-entrypoint.sh  main.py  pyproject.toml  smoke_test.py
gateway/: main.py  pyproject.toml  store.py
infra/: capacity_provider.tf  cloudwatch.tf  driver.tf  dynamodb.tf  ecr.tf  ecs.tf  gateway-init.sh  gateway.tf  locals.tf  main.tf  outputs.tf  terraform.tfstate.1780289947.backup  terraform.tfstate.1780290033.backup  terraform.tfstate.1780290047.backup  variables.tf  vpc.tf  vpc_endpoints.tf
web/: index.html  package-lock.json  package.json
web/src/: App.css  App.jsx  api.js  index.css
web/src/components/: QueryDag.jsx  Sidebar.jsx  Topbar.jsx
web/src/views/: DataExplorer.jsx  History.jsx  Warehouses.jsx  Worksheet.jsx
