[project]
name = "gateway"
version = "0.1.0"
description = "Flashpoint gateway - minimal EC2 control plane for Fargate driver tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.18",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "pyspark>=4.0.2",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "grpcio>=1.62.0",
    "grpcio-status>=1.62.0",
    "zstandard>=0.25.0",
]
